login database  error re-added

--- a/Login/templates/Login.html
+++ b/Login/templates/Login.html
@@ -46,6 +46,9 @@
                                     {{ form.password }}
                                 </span>
                             </div>
+                            <div class="errors">
+                                <p style="color: rgba(212, 57, 57, 0.76)"> {{ error }}</p>
+                            </div>
                             <div class="submission">
                                 <input type="submit" id="submit" value="Login">
                             </div>
