--- a/Login/static/stylesheets/login.scss
+++ b/Login/static/stylesheets/login.scss
@@ -57,7 +57,7 @@ body {
                 display: inline;
             }
 
-            .error {
+            .errors {
                 color: $error-code;
             }
 
