--- a/Login/templates/Login.html
+++ b/Login/templates/Login.html
@@ -47,7 +47,7 @@
                                 </span>
                             </div>
                             <div class="errors">
-                                <p style="color: rgba(212, 57, 57, 0.76)"> {{ error }}</p>
+                                <p> {{ error }}</p>
                             </div>
                             <div class="submission">
                                 <input type="submit" id="submit" value="Login">
