--- a/templates/pages/_index.html
+++ b/templates/pages/_index.html
@@ -1,55 +1,8 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
-        <link rel="stylesheet" href="{% static 'css/style.css' %}" >
-        
-    </head>
-    <body >
-        <div class="container">
-            <div class="imagebg"></div>
-            <div class="container">
-                <div class="form-container z-depth-5">
-                    {% include 'pages/_alert.html' %}
-                    <h2>Adding Employee Form</h2> 
-                    <div class="row">
-                        <form class="col s12" id="reused_form" action="{% url 'employee' %}" method = "POST">
-                            {% csrf_token %}
-                            <div class="row">
-                                <div class="input-field col s12">
-                                    <input id="name" type="text" name="name" required class="validate">
-                                    <label for="name">Full Name</label>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="input-field col s12">
-                                    <input id="point" type="number" name="point" required class="validate">
-                                    <label for="point">Point</label>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="input-field col s12">
-                                    <input id="phone" type="number" name="phone" required class="validate">
-                                    <label for="phone">Phone Number</label>
-                                </div>
-                            </div>
-                            <div>
-                                <button class="waves-effect waves-light btn submitbtn" type="submit">Submit</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <!--Import jQuery before materialize.js-->
-            <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-            <script src="{% static 'js/form.js' %}"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
-        </div>
-    </body>
-</html>
+{% block content %}
+    <h2>Adding Employee Form</h2>
+    <form method="POST" class="post-form">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="save btn btn-default">Save</button>
+    </form>
+{% endblock %}
