--- a/Manager/templates/list.html
+++ b/Manager/templates/list.html
@@ -1,5 +1,11 @@
+{% extends 'base.html' %}
 {% block content %}
-<table border = 'solid'>
+<header>
+  <title>Edit Employees Information</title>
+  {% load static %}
+    <link rel = "stylesheet" type = "text/css" href = "{% static 'editemployee.css' %}">
+</header>
+<table style = "border:solid">
   <th>Employees</th>
   <th>Point</th>
   <th>Phone Number</th>
