working on employee design

--- a/Manager/templates/employee.html
+++ b/Manager/templates/employee.html
@@ -9,23 +9,27 @@
     <form method="POST" class="post-form">
         {% include 'alert.html' %}
         {% csrf_token %}
-        <div>
-            <label for="name"> Name:</label> 
-            {{ form.name }}
+        <div class="wrapper">
+            <div class = "forms">
+                <div class = "labels-div">
+            <label class = "labels" for="name"> Name:</label><br>
+            <label  class = "labels" for= "point"> Point:</label><br>
+            <label  class = "labels" for="phone"> Phone Number:</label><br>
+            </div>
+            <div class = "textfield-div">
+            {{ form.point }}<br>
+            {{ form.name }}<br>
+            {{ form.phone }}<br>
         </div>
-        <div>
-            <label for= "point"> Point:</label>
-            {{ form.point }}
         </div>
-        <div>
-            <label for="phone"> Phone Number:</label>
-            {{ form.phone }}
-        </div>
+        <div class = "buttons">
         <button type="submit" name="save_button" class="save btn btn-default">Save</button>
         <button type="submit" name ="cancel_button" class="cancel btn btn-default" formnovalidate>Cancel</button>
         {% if title == "Update Employee Information" %}
         <button type="submit" name ="delete_button" class="delete btn btn-default">Delete</button>
         {% endif %}
+        </div>
+    </div>
     </form>
 
     {% endblock %}
