--- a/Manager/static/base.css
+++ b/Manager/static/base.css
@@ -2,14 +2,15 @@
 
 #nav{
     background-color: rgba(124, 60, 7, 0.513);
-    padding:1%;
+    padding:.5%;
     text-align: center;
+    
 }
 
 #list li {
     display: inline-block;
     background-color: rgba(41, 20, 4, 0.602);
-    border-radius: 7%;
+    border-radius:4%;
     margin:0 .5%;
     font-family:"Lato";
     padding:0;
