--- a/Manager/templates/home.html
+++ b/Manager/templates/home.html
@@ -6,7 +6,7 @@
  </header>
     <div>
             {% csrf_token %}
-            <p>{{Hello}}</p>
+            <!-- <p>{{Hello}}</p> -->
     </div>
    
 {% endblock %}
