--- a/Manager/templates/base.html
+++ b/Manager/templates/base.html
@@ -1,26 +1,80 @@
 <html>
     <head>
+        <title>Dashboard</title>
         {% load static %}
-        <link rel = "stylesheet" type = "text/css" href = "{% static 'base.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        <!-- font awesome import-->
+        <script src="https://kit.fontawesome.com/60c36ce90b.js" crossorigin="anonymous"></script>
     </head>
-    <header>
-        <nav id = "nav">
-            <ul id = "list">
-                <li id = "list_item1"><a href = "/manager/homepage">Home</a></li>
-                <li id = "list_item2"><a href = "/manager/addemployee">Add New Employee</a></li>
-                <li id = "list_item3"><a href = "/manager/list">Edit Employees information</a></li>
-                <li id = "list_item4"><a href = "">Weekly Reports</a></li>
 
+    <!-- top row, consists of the dashboard title and the other page features (such as logout)-->
+    <div class="row">
+        <div class="col s6 m6" id="page-info">
+            <h3>Manager //</h3>
+            <h1>Dashboard</h1>
+        </div>
+        <div class="col s6 m6" id="corner-menu">
+            <ul>
+                <li><button id="logout">Log Out</button>
             </ul>
-        </nav>
-    
-</header>
+        </div>
+    </div>
+    <!-- end top row-->
+
+     <!-- second row, consists of the side navigation bar and the page's main content-->
+     <div class="row">
+        <div class="col m4 l4 hide-on-med-and-down" id="sidenav">
+            <!-- navigation sidebar-->
+            <nav id="nav">
+                <ul>
+                    <li id="list_item1"><span><a class="active" href="/manager/homepage"><i class="fas fa-home fa-fw"></i>
+                        Home</a></span></li>
+                    <li id="list_item2"><span><a href="/manager/addemployee"><i class="fas fa-user fa-fw"></i>
+                        Add New Employee</a></span></li>
+                    <li id="list_item3"><a href="/manager/list"><i class="fas fa-edit fa-fw"></i>
+                        Edit Employee Information</a></li>
+                    <li id="list_item4"><a href=""><i class="fas fa-file-alt fa-fw"></i>
+                        Weekly Reports</a></li>
+                </ul>
+            </nav>
+            <!-- end navigation sidebar-->
+        </div>
+
+        <!-- main content-->
+        <div class="col s12 m12 l8" id="main-content">
+            <h4>Recent Forms</h4>
+            <div class="center-align" id="recent-forms">
+                <table>
+                    <!-- table headers-->
+                    <tr id="header">
+                        <th>Employee</th>
+                        <th>Time</th>
+                        <th>Date</th>
+                    </tr>
+                    <!-- table cells; placeholder text-->
+                    <tr>
+                        <td>Joe</td>
+                        <td>4:20 p.m.</td>
+                        <td>4/20/2020</td>
+                    </tr>
+                    <tr>
+                        <td>Jack</td>
+                        <td>4:25 p.m.</td>
+                        <td>4/25/2020</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <!-- end main content-->
+    </div>
+    <!-- end second row-->
+
 
 <body>
-{% block content %}
-{% endblock %}
-
-
+    {% block content %}
+    {% endblock %}
 </body>
+
 </html>
 
