--- a/Manager/static/home.css
+++ b/Manager/static/home.css
@@ -1,5 +1,3 @@
-/*
-#list_item1 {
-    background-color: rgba(46, 46, 46, 0.438) !important;
+#main-content #recent-forms tr#header {
+    border-bottom: 1px solid #000000;
 }
-*/
