--- a/Employees/static/emphome.css
+++ b/Employees/static/emphome.css
@@ -4,10 +4,10 @@
 }
 #outer-wrapper{
     display: grid;
-    grid-template-rows: 1fr 3fr 1fr;
+    grid-template-rows: 4fr 9fr .5fr 4fr;
     background-color: rgba(226, 161, 87, 0.116);
     margin:5%;
-    row-gap: 5%;
+    
     
 }
 #top-section{
@@ -50,4 +50,7 @@
 }
 #bottom-section input, #bottom-section select{
     width: 7vw;
+}
+#add-div #add-button{
+    padding:10vw;
 }
