--- a/Employees/templates/employee_home.html
+++ b/Employees/templates/employee_home.html
@@ -36,7 +36,7 @@
                     <input type = "number" id = "Total_Tip_By_Cards_2">
                     <br>
                     <label class= "labels", id = "ctLabel2">Cash Tip</label>
-                    <input type = "number" id = "cash_tip_2">
+                    <input type = "number" id = "cash_tip_2" onblur="total_tip()">
                     <br>
                     <label class= "labels", id = "ttLabel">Total Tip</label>
                     <input type = "number" id = "Total_Tip">
