--- a/Employees/templates/employee_home.html
+++ b/Employees/templates/employee_home.html
@@ -5,7 +5,9 @@
     <link rel = "stylesheet" type = "text/css" href = "{% static 'emphome.css' %}">
 </header>
 <body>
-    <form action = "" method = "POSt">
+    <form action = ""method = "POST" id = "form" onsubmit="return validate()">
+        {% include 'alert.html' %}
+
         {% csrf_token %}
         {{form.management_form}}
         
@@ -87,7 +89,8 @@
             
         </div>
         <div id = 'add-div'>
-            <input type = "button" id = "add-button" onclick="addElement()" value = "add">
+            <input type = "button" id = "add-button" onclick="addElement()" value = "Add Employee">
+            <input type = "button" id = "calculate-tips" onclick = "calculateTips()" value = "Calculate Tips">
 
         </div>
         <div id = "bottom-section">
@@ -98,16 +101,17 @@
             <label class = "labels", id = "cbLabel">Closed By</label>
             {{new_form.submitted_employee}}
             <label class = "labels", id = "tiLabel">Total Index</label>
-            <input type = "number" id = "total_index" onfocus="calculateTotalIndex(this)">
+            <input readonly type = "number" id = "total_index" onfocus="calculateTotalIndex(this)">
             <label class = "labels", id = "tlLabel">Tip Left</label>
-            <input type = "number" id = "tip_left">
+            <input readonly type = "number" id = "tip_left">
             <label class = "labels", id = "clLabel">Cash Left</label>
-            <input type = "number" id = "cash_left"><br>
+            <input readonly type = "number" id = "cash_left"><br>
             
-            <input type = "submit">
+            <input type = "submit" >
         </div>
-    </form>
     </div>
+</form>
+
     <input  hidden readonly id = "query" readonly type = text value = "{{js_dict}}">
 </body>
 
