working on the calculation form

--- a/Employees/templates/employee_home.html
+++ b/Employees/templates/employee_home.html
@@ -21,7 +21,7 @@
                     {{new_form.service_charge}}
                     <br>
                     <label class= "labels", id = "ttbcLabel">Total Tip By CC</label>
-                    <input type = "number" id = "Total_Tip_By_Cards">
+                    <input readonly type = "number" id = "Total_Tip_By_Cards">
                 </div>
                 <div class = 'asd'>
                     <label class= "labels", id = "csLabel">Cash Sales</label>
@@ -31,26 +31,26 @@
                     {{new_form.cash_tip}}
                     <br>
                     <label class= "labels", id = "tcLabel">Total Cash</label>
-                    <input type = "number" id = "Total_Cash">
+                    <input readonly type = "number" id = "Total_Cash">
                 </div>
                 <div class = 'asd'>
                     <label class= "labels", id = "ccLabel2">CC Tip(s)</label>
-                    <input type = "number" id = "Total_Tip_By_Cards_2">
+                    <input readonly type = "number" id = "Total_Tip_By_Cards_2">
                     <br>
                     <label class= "labels", id = "ctLabel2">Cash Tip</label>
-                    <input type = "number" id = "cash_tip_2" onblur="total_tip()">
+                    <input readonly type = "number" id = "cash_tip_2" onblur="total_tip()">
                     <br>
                     <label class= "labels", id = "ttLabel">Total Tip</label>
-                    <input type = "number" id = "Total_Tip">
+                    <input readonly type = "number" id = "Total_Tip">
                 </div>
                 <div class = 'asd'>
                     <label class= "labels", id = "ttLabel2">Total Tip</label>
-                    <input type = "number" id = "Total_Tip_2">
+                    <input readonly type = "number" id = "Total_Tip_2">
                     <br>
                     <label class= "labels", id = "pstLabel">Pre Shift Tip</label>
                     {{new_form.pre_shift_tip}}<br>
                     <label class= "labels", id = "stLabel">Shift Tip</label>
-                    <input type = "number" id = "shift_tip">
+                    <input readonly type = "number" id = "shift_tip">
                 </div>
             </div>
 
