--- a/Manager/templates/home.html
+++ b/Manager/templates/home.html
@@ -4,6 +4,9 @@
 <head>
    {% load static %}
    <link rel = "stylesheet" type = "text/css" href = "{% static 'home.css' %}">
+   <script> 
+      var page = '{{ page }}';
+   </script>
 </head>
 
 <!-- main content-->
