--- a/Manager/static/addemployee.css
+++ b/Manager/static/addemployee.css
@@ -102,6 +102,16 @@ body {
     transition: background-color 450ms ease;
 }
 
+.form-buttons button.delete {
+    background-color: none;
+    transition: background-color 450ms ease;
+}
+
+.form-buttons button.delete:hover {
+    background-color: rgba(255, 64, 64, 0.2);
+    transition: background-color 450ms ease;
+}
+
 /*
 .wrapper{
     margin:2%;
