--- a/Manager/static/base.css
+++ b/Manager/static/base.css
@@ -124,6 +124,7 @@ nav {
 
 #main-content {
     height: 85vh;
+    overflow-y: auto;
 }
 
 @media only screen and (max-width: 992px) {
@@ -157,7 +158,7 @@ nav {
         transition: all 450ms ease;
     }
 
-    #nav ul li .fas {
+    #nav ul li .fas, #nav ul li .far {
         display: none;
     }
 }
