working on the weekly reports

--- a/Manager/templates/base.html
+++ b/Manager/templates/base.html
@@ -34,7 +34,7 @@
                         Add New Employee</a></span></li>
                     <li id="list_item3"><a href="/manager/list"><i class="fas fa-edit fa-fw"></i>
                         Edit Employee Information</a></li>
-                    <li id="list_item4"><a href=""><i class="fas fa-file-alt fa-fw"></i>
+                    <li id="list_item4"><a href="/manager/weeklyreports"><i class="fas fa-file-alt fa-fw"></i>
                         Weekly Reports</a></li>
                 </ul>
             </nav>
