--- a/Employees/static/emphome.css
+++ b/Employees/static/emphome.css
@@ -5,15 +5,53 @@
 }
 
 #top-section, #second-section, #third-section, #bottom-section {
-    margin-bottom: 35px;
+    margin-bottom: 65px;
+}
+
+h6 {
+    font-size: 14px;
+}
+
+label {
+    font-size: 14px;
+    color: #9e9e9e;
+    transition: color 450ms ease;
+}
+
+label:hover {
+    color: #000000;
+    transition: color 450ms ease;
+}
+
+input:focus {
+    border-bottom: 1px solid #000000 !important;
+    box-shadow: 0 0.5px 0 0 #000000 !important;
+}
+
+input[type="number"] {
+    border-bottom: 1px solid black;
+    transition: all 450ms ease;
+}
+
+input[type="number"]:hover {
+    border-bottom: 1px solid black;
+    transition: all 450ms ease;
 }
 
 label.readonly {
     color: #000000;
 }
 
-input:not(:read-only):hover {
+#bottom-section label {
+    color: #000000;
+}
+
+#bottom-section .date {
     border-bottom: 1px solid #000000;
+}
+
+input[type=number]:not(.browser-default):focus:not([readonly])+label {
+    color: #9e9e9e !important;
 }
 
 input:not(:read-only):hover {
@@ -30,18 +68,66 @@ input:read-only:hover {
 
 select {
     display: block !important;
+    border: 1px solid #000000;
+    margin-bottom: 10px;
+}
+
+select:focus {
+    outline: none;
 }
 
 #add-button, #calculate-tips, #form-submit {
+    margin: 0px 10px 5px 10px;
+    width: 250px;
+    height: 35px;
     background: transparent;
     border: 1px solid black;
+    cursor: pointer;
+    background-color: none;
+    transition: background-color 450ms ease;
+}
+
+
+#add-button:hover {
+    background-color: rgba(51, 211, 36, 0.2);
+    transition: background-color 450ms ease;
+}
+
+#calculate-tips:hover {
+    background-color: rgba(54, 198, 218, 0.2);
+    transition: background-color 450ms ease;
+}
+
+#form-submit {
+    background-color: rgba(0,0,0,0.2);
 }
 
 /* MEDIA QUERIES */
 @media only screen and (min-width: 0) {
+    h6 {
+        white-space: nowrap;
+        overflow-x: scroll;
+    }
+    
     .s5ths {
         width: 20%;
     }
+}
+
+@media only screen and (max-width: 601px) {
+    #add-button, #calculate-tips {
+        margin-top: 10px;
+    }
+
+    #add-button {
+        margin-bottom: 15px;
+    }
+
+    label#tfLabel, label#cbLabel, label#tiLabel {
+        white-space: nowrap;
+        overflow-x: scroll;
+    }
+
 }
 
 /*
