--- a/Employees/templates/employee_home.html
+++ b/Employees/templates/employee_home.html
@@ -4,7 +4,9 @@
 <head>
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'emphome.css' %}">
-    <script src="{% static 'employee_home.js' %}"></script>
+    <script>
+        var page = "{{ page }}";
+    </script>
 </head>
 
 <!-- main content-->
@@ -16,41 +18,41 @@
     {{form.management_form}}
         
 <div id="wrapper">
-    <!-- first section--> <!-- structure complete, TODO: style input fields-->
+    <!-- first section-->
     <div class="row" id="top-section">
         <div class="col s3 m3 l3 asd">
-            <label class="labels" id="ccLabel">Credit Card Tip</label>
+            <label for="cc_tip" id="ccLabel">Credit Card Tip:</label>
             {{new_form.cc_tip}}
-            <label class="labels" id="scLabel">Service Charge</label>
+            <label for="sc_label" id="scLabel">Service Charge:</label>
             {{new_form.service_charge}}
-            <label class="readonly labels" id="ttbcLabel">Total Tip By CC</label>
+            <label for="Total_Tip_By_Cards" class="readonly" id="ttbcLabel">Total Tip By CC:</label>
             <input readonly type="number" id="Total_Tip_By_Cards">
         </div>
 
         <div class="col s3 m3 l3 asd">
-            <label class="labels" id="csLabel">Cash Sales</label>
+            <label class="labels" id="csLabel">Cash Sales:</label>
             {{new_form.cash_sales}}
-            <label class= "labels" id="ctLabel">Cash Tip</label>
+            <label class= "labels" id="ctLabel">Cash Tip:</label>
             {{new_form.cash_tip}}
-            <label class= "readonly labels" id="tcLabel">Total Cash</label>
+            <label class= "readonly labels" id="tcLabel">Total Cash:</label>
             <input readonly type="number" id="Total_Cash">
         </div>
 
         <div class="col s3 m3 l3 asd">
-            <label class="readonly labels" id="ccLabel2">CC Tip(s)</label>
+            <label class="readonly labels" id="ccLabel2">CC Tip(s):</label>
             <input readonly type="number" id="Total_Tip_By_Cards_2">
-            <label class= "readonly labels" id = "ctLabel2">Cash Tip</label>
+            <label class= "readonly labels" id = "ctLabel2">Cash Tip:</label>
             <input readonly type="number" id="cash_tip_2" onblur="total_tip()">
-            <label class= "readonly labels" id = "ttLabel">Total Tip</label>
+            <label class= "readonly labels" id = "ttLabel">Total Tip:</label>
             <input readonly type="number" id="Total_Tip">
         </div>
 
         <div class="col s3 m3 l3 asd">
-            <label class="readonly labels" id="ttLabel2">Total Tip</label>
+            <label class="readonly labels" id="ttLabel2">Total Tip:</label>
             <input readonly type="number" id="Total_Tip_2">
-            <label class= "labels" id="pstLabel">Pre Shift Tip</label>
+            <label class= "labels" id="pstLabel">Pre-Shift Tip:</label>
             {{new_form.pre_shift_tip}}
-            <label class= "readonly labels" id="stLabel">Shift Tip</label>
+            <label class= "readonly labels" id="stLabel">Shift Tip:</label>
             <input readonly type="number" id="shift_tip">
         </div>
     </div>
@@ -58,35 +60,38 @@
     <!-- second section-->
     <div class="row" id="second-section">
         <div class="col s5ths" id="names">
-            <h6>Name</h6>
+            <h6>Name:</h6>
             {% for form in form %}
                 {{ form.employee }}
             {%endfor%}
         </div>
 
         <div class="col s5ths" id="indexes">
-            <h6>Performance Index</h6>
+            <!-- "performance index" is too long, so when the screen size is reduced to "small," the text will not wrap
+                and the entire text will be visible by scrolling on it. this is to prevent the text wrap from throwing off the
+                alignment of the fields.-->
+            <h6>Performance Index:</h6>
             {% for form in form %}
                 {{ form.point }}
             {%endfor%}
         </div>
 
         <div class="col s5ths"  id="tips">
-            <h6>Tip</h6>
+            <h6>Tip:</h6>
             {% for form in form %}
                 {{ form.tip_amount }}
             {%endfor%}
         </div>
 
         <div class="col s5ths" id="paid-todays">
-            <h6>Paid Today</h6>
+            <h6>Paid Today:</h6>
             {% for form in form %}
                 {{ form.paid_today }}
             {%endfor%}
         </div>
         
         <div class="col s5ths"  id="paid-laters">
-            <h6>Paid Later</h6>
+            <h6>Paid Later:</h6>
             {% for form in form %}
                 {{ form.paid_later }}
             {%endfor%}
@@ -94,7 +99,6 @@
     </div>
 
     <!-- third section-->
-    
     <div class="row" id="third-section">
         <div class="col s12 center-align" id="add-div">
             <input type="button" id="add-button" onclick="addElement()" value="Add Employee">
@@ -104,42 +108,41 @@
     
 
     <!-- fourth section -->
-    
     <div class="row" id="bottom-section">
-            <div class="col l2">
-                <label class="labels" id="dateLabel">Date</label>
+            <div class="col s2 m2 l2">
+                <label class="labels" id="dateLabel">Date:</label>
                 {{new_form.date}}
             </div>
 
-            <div class="col l2">
-                <label class="labels" id="tfLabel">Time Frame</label>
+            <div class="col s2 m2 l2">
+                <label class="labels" id="tfLabel">Time Frame:</label>
                 {{new_form.time_frame}}
             </div>
 
-            <div class="col l2">
-                <label class="labels" id="cbLabel">Closed By</label>
+            <div class="col s2 m2 l2">
+                <label class="labels" id="cbLabel">Closed By:</label>
                 {{new_form.submitted_employee}}
             </div>
 
-            <div class="col l2">
-                <label class="readonly labels" id="tiLabel">Total Index</label>
+            <div class="col s2 m2 l2">
+                <label class="readonly" id="tiLabel">Total Index:</label>
                 <input readonly type="number" id="total_index" onfocus="calculateTotalIndex(this)">
             </div>
 
-            <div class="col l2">
-                <label class="readonly labels" id="tlLabel">Tip Left</label>
+            <div class="col s2 m2 l2">
+                <label class="readonly" id="tlLabel">Tip Left:</label>
                 <input readonly type="number" id="tip_left">
             </div>
 
-            <div class="col l2">
-            <label class="readonly labels" id="clLabel">Cash Left</label>
+            <div class="col s2 m2 l2">
+            <label class="readonly" id="clLabel">Cash Left:</label>
             <input readonly type="number" id="cash_left"><br>
             </div> 
     </div>
 
     <div class="row">
-        <div class="col l12 center-align">
-            <input type="submit" id="form-submit">
+        <div class="col s12 m12 l12 center-align">
+            <input type="submit" value="Submit Form" id="form-submit">
         </div>
     </div>
 </div>
@@ -149,5 +152,7 @@
 </form>
 
 <input type="hidden" readonly id="query" readonly type="text" value="{{ js_dict }}">
+
+<script src="{% static 'employee_home.js' %}"></script>
 <!-- end main content-->
 {% endblock %}
