--- a/Manager/templates/base.html
+++ b/Manager/templates/base.html
@@ -9,8 +9,6 @@
         <!-- scripts-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
         <script src="{% static 'activeLink.js' %}"></script>
-        <!-- font awesome import-->
-        <script src="https://kit.fontawesome.com/60c36ce90b.js" crossorigin="anonymous"></script>
     </head>
 
     <!-- top row, consists of the dashboard title and the other page features (such as logout)-->
@@ -38,14 +36,10 @@
         <div class="col s12 m12 l4" id="sidenav">
             <nav id="nav">
                 <ul>
-                    <li id="list_item1"><span><a href="/manager/homepage"><i class="fas fa-home fa-fw"></i>
-                        Home</a></span></li>
-                    <li id="list_item2"><span><a href="/manager/addemployee"><i class="fas fa-user fa-fw"></i>
-                        Add New Employee</a></span></li>
-                    <li id="list_item3"><a href="/manager/list"><i class="fas fa-edit fa-fw"></i>
-                        Edit Employee Information</a></li>
-                    <li id="list_item4"><a href=""><i class="fas fa-file-alt fa-fw"></i>
-                        Weekly Reports</a></li>
+                    <li id="list_item1"><span><a href="/manager/homepage">Home</a></span></li>
+                    <li id="list_item2"><span><a href="/manager/addemployee">Add New Employee</a></span></li>
+                    <li id="list_item3"><a href="/manager/list">Edit Employee Information</a></li>
+                    <li id="list_item4"><a href="">Weekly Reports</a></li>
                 </ul>
             </nav>
         </div>
