Update Logout Button

--- a/Employees/templates/base_employee.html
+++ b/Employees/templates/base_employee.html
@@ -18,7 +18,13 @@
         </div>
         <div class="col s6 m6" id="corner-menu">
             <ul>
-                <li><button id="logout">Log Out</button></li>
+                <li><Button id="logout" onclick = "javascript:{document.getElementById('logOut').submit()}"> 
+                    Log Out
+               </Button>
+               <form action = "{% url 'logout' %}" method = "POST" id = "logOut">
+                   {% csrf_token %}
+               </form>
+               </li>
             </ul>
         </div>
     </div>
