--- a/Employees/templates/base_employee.html
+++ b/Employees/templates/base_employee.html
@@ -21,7 +21,7 @@
                 <li><Button id="logout" onclick = "javascript:{document.getElementById('logOut').submit()}"> 
                     Log Out
                </Button>
-               <form action = "{% url 'logout' %}" method = "POST" id = "logOut">
+               <form action = "{% url 'logoutEmployee' %}" method = "POST" id = "logOut">
                    {% csrf_token %}
                </form>
                </li>
