--- a/Employees/static/emphome.css
+++ b/Employees/static/emphome.css
@@ -12,58 +12,63 @@ h6 {
     font-size: 14px;
 }
 
+h6.readonly {
+    color: #9e9e9e;
+}
+
 label {
     font-size: 14px;
     color: #9e9e9e;
     transition: color 450ms ease;
 }
 
-label:hover {
+label.requires-input {
     color: #000000;
-    transition: color 450ms ease;
 }
 
-input:focus {
+input:not(:read-only) {
     border-bottom: 1px solid #000000 !important;
     box-shadow: 0 0.5px 0 0 #000000 !important;
 }
 
-input[type="number"] {
-    border-bottom: 1px solid black;
-    transition: all 450ms ease;
+input[type="button"] {
+    border-bottom: 1px solid #000000 !important;
+    box-shadow: none !important;
 }
 
-input[type="number"]:hover {
-    border-bottom: 1px solid black;
-    transition: all 450ms ease;
+input[type="submit"] {
+    border-bottom: 1px solid #000000 !important;
+    box-shadow: none !important;
 }
 
 label.readonly {
-    color: #000000;
-}
-
-#bottom-section label {
-    color: #000000;
-}
-
-#bottom-section .date {
-    border-bottom: 1px solid #000000;
+    color: #9e9e9e;
 }
 
 input[type=number]:not(.browser-default):focus:not([readonly])+label {
+    color: #000000 !important;
+}
+
+input[type=number]:not(.browser-default):focus:not([readonly])+label.bottom {
     color: #9e9e9e !important;
 }
 
-input:not(:read-only):hover {
-    border-bottom: 1px solid #000000;
+input:read-only {
+    border-bottom: 1px solid #9e9e9e !important;
 }
 
-input:read-only {
-    border-bottom: 1px solid #000000 !important;
+input:read-only:focus {
+    border: none;
+    box-shadow: none !important;
 }
 
 input:read-only:hover {
     cursor: default;
+}
+
+input.performance_index {
+    border-bottom: 1px solid #9e9e9e !important;
+    box-shadow: none !important;
 }
 
 select {
@@ -87,6 +92,22 @@ select:focus {
     transition: background-color 450ms ease;
 }
 
+#bottom-section #dateLabel, #tfLabel, #cbLabel {
+    color: #000000;
+}
+
+#bottom-section #total_index {
+    border-bottom: 1px solid #000000 !important;
+    cursor: text;
+}
+
+#bottom-section #tiLabel {
+    color: #000000;
+}
+
+#bottom-section .date {
+    border-bottom: 1px solid #9e9e9e;
+}
 
 #add-button:hover {
     background-color: rgba(51, 211, 36, 0.2);
