--- a/Manager/static/home.css
+++ b/Manager/static/home.css
@@ -4,10 +4,14 @@
 
 #period_selector .date_label{
     font-size: 14px;
+    color: #000000;
 }
 
 input[type="date"] {
     margin-bottom: 20px !important;
+    cursor: pointer;
+    border-bottom: 1px solid #000000 !important;
+    box-shadow: 0 0.5px 0 0 #000000 !important;
 }
 
 input[type=date]:not(.browser-default):focus:not([readonly])+label {
